# difflm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo.py  main.py  models.py  pyproject.toml  webui.py
benchmark/: benchmark_llada_diffusion.py
difflm/generation/: llada_diffusion_model.py
generation/: abstraction_diffusion_generator.py  generation_config.py  mock_diffusion_generator.py
scripts/: quantize_llada.py
static/: index.html
static/css/: styles.css
static/js/: main.js
tests/generation/: test_llada_diffusion.py
