[project]
name = "difflm"
version = "0.1.0"
description = "DiffLM: A Diffusion-based Language Model with Structured Outputs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5; sys_platform == 'linux'",
    "jaxtyping>=0.3.2",
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "polyfactory>=2.21.0",
    "pydantic>=2.11.5",
    "pytest-benchmark>=5.1.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "types-tqdm>=4.67.0.20250516",
]

[dependency-groups]
dev = [
    "deptry>=0.21.1",
    "line-profiler>=4.2.0",
    "memray>=1.15.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0",
    "pytest-profiling>=1.8.1",
    "types-requests>=2.31.0",
    "mypy>=1.15.0",
    "pytest-loguru>=0.4.0",
]

[project.optional-dependencies]

[tool.ruff]
line-length = 150
target-version = "py313"

[tool.ruff.lint]
preview = true
# we could consider adding "D" for doc, and "DOC" for more doc
select = [
    "I",
    "E",
    "F",
    "W",
    "B",
    "N",
    "C90",
    "UP",
    "ANN",
    "C4",
    "PT",
    "Q",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "TD",
    "PD",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
    "RUF",
]

# Ignore missing TODO link and 
ignore = ["TD003", "F722"]
# "bugbear" checks are not fixable by default
unfixable = ["B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.rules]
unresolved-import = "ignore"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = "--capture=no"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["difflm"]
