[project]
name = "difflm"
version = "0.1.0"
description = "DiffLM: A Diffusion-based Language Model with Structured Outputs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.8.1",
    "jaxtyping>=0.3.2",
    "loguru>=0.7.3",
    "numpy>=2.3.1",
    "optimum>=1.26.1",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "modal>=1.0.4",
]

[dependency-groups]
dev = [
    "gptqmodel>=2.2.0",
    "types-tqdm>=4.67.0.20250516",
    "deptry>=0.23.0",
    "line-profiler>=4.2.0",
    "memray>=1.17.2",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-profiling>=1.8.1",
    "types-requests>=2.31.0",
    "mypy>=1.16.1",
    "pytest-loguru>=0.4.0",
    "ty>=0.0.1a12",
    "ruff>=0.12.0",
]


[tool.ruff]
line-length = 150
target-version = "py313"

[tool.ruff.lint]
preview = true
# we could consider adding "D" for doc, and "DOC" for more doc
select = [
    "I",
    "E",
    "F",
    "W",
    "B",
    "N",
    "C90",
    "UP",
    "ANN",
    "C4",
    "PT",
    "Q",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "TD",
    "PD",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
    "RUF",
]

# Ignore missing TODO link and
ignore = ["TD003", "F722", "PLR0914", "TRY003"]
# "bugbear" checks are not fixable by default
unfixable = ["B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.deptry.per_rule_ignores]
# These are needed at runtime to run a GPTQ model.
DEP002 = ["accelerate", "optimum"]

[tool.ty.rules]
unresolved-import = "ignore"
possibly-unbound-attribute = "ignore"

[tool.mypy]
exclude = ["scripts"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = "--capture=no"

[build-system]
requires = ["hatchling", "torch"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["difflm"]
